jucompiler/y.output
Terminals which are not used

   RESERVED
   SQ
   ARROW
   END
   MUL


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE Declaring RBRACE

    2 Declaring: MethodDecl Declaring
    3          | FieldDecl Declaring
    4          | SEMICOLON Declaring
    5          | FieldDecl
    6          | MethodDecl
    7          | SEMICOLON

    8 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    9 FieldDecl: PUBLIC STATIC Type ID CommaId SEMICOLON
   10          | PUBLIC STATIC Type ID SEMICOLON
   11          | error SEMICOLON

   12 CommaId: COMMA ID CommaId
   13        | COMMA ID

   14 Type: BOOL
   15     | INT
   16     | DOUBLE

   17 MethodHeader: VOID ID LPAR FormalParams RPAR
   18             | VOID ID LPAR RPAR
   19             | Type ID LPAR FormalParams RPAR
   20             | Type ID LPAR RPAR

   21 FormalParams: Type ID CommaTypeId
   22             | STRING LSQ RSQ ID
   23             | Type ID

   24 CommaTypeId: COMMA Type ID CommaTypeId
   25            | COMMA Type ID

   26 MethodBody: LBRACE StatementVarDecl RBRACE
   27           | LBRACE RBRACE

   28 StatementVarDecl: Statement StatementVarDecl
   29                 | VarDecl StatementVarDecl
   30                 | Statement
   31                 | VarDecl

   32 CommaIdVarDecl: COMMA ID CommaIdVarDecl
   33               | COMMA ID

   34 VarDecl: Type ID CommaIdVarDecl SEMICOLON
   35        | Type ID SEMICOLON

   36 Statement: LBRACE Statement2 RBRACE
   37          | LBRACE RBRACE
   38          | IF LPAR Expr RPAR Statement
   39          | IF LPAR Expr RPAR Statement ELSE Statement
   40          | WHILE LPAR Expr RPAR Statement
   41          | RETURN ExprSemicolon
   42          | MethodInvAssParseArgs SEMICOLON
   43          | SEMICOLON
   44          | PRINT LPAR ExprOrStrlit RPAR SEMICOLON

   45 Statement2: Statement Statement2
   46           | Statement

   47 ExprSemicolon: Expr SEMICOLON
   48              | SEMICOLON

   49 ExprOrStrlit: Expr
   50             | STRLIT

   51 MethodInvAssParseArgs: MethodInvocation
   52                      | Assignment
   53                      | ParseArgs
   54                      | error

   55 MethodInvocation: ID LPAR Expr CommaExpr RPAR
   56                 | ID LPAR Expr RPAR
   57                 | ID LPAR RPAR
   58                 | ID LPAR Expr error RPAR

   59 CommaExpr: COMMA Expr CommaExpr
   60          | INTLIT
   61          | COMMA Expr

   62 Assignment: ID ASSIGN Expr

   63 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR
   64          | PARSEINT LPAR ID error RPAR

   65 Expr: Assignment
   66     | OtherExpr

   67 OtherExpr: OtherExpr PLUS OtherExpr
   68          | OtherExpr MINUS OtherExpr
   69          | OtherExpr STAR OtherExpr
   70          | OtherExpr DIV OtherExpr
   71          | OtherExpr MOD OtherExpr
   72          | OtherExpr AND OtherExpr
   73          | OtherExpr OR OtherExpr
   74          | OtherExpr XOR OtherExpr
   75          | OtherExpr LSHIFT OtherExpr
   76          | OtherExpr RSHIFT OtherExpr
   77          | OtherExpr EQ OtherExpr
   78          | OtherExpr GE OtherExpr
   79          | OtherExpr GT OtherExpr
   80          | OtherExpr LE OtherExpr
   81          | OtherExpr LT OtherExpr
   82          | OtherExpr NE OtherExpr
   83          | PLUS OtherExpr
   84          | MINUS OtherExpr
   85          | NOT OtherExpr
   86          | LPAR Expr RPAR
   87          | LPAR error RPAR
   88          | MethodInvocation
   89          | ParseArgs
   90          | ID
   91          | ID DOTLENGTH
   92          | INTLIT
   93          | REALLIT
   94          | BOOLLIT


Terminals, with rules where they appear

$end (0) 0
error (256) 11 54 58 64 87
ID (258) 1 9 10 12 13 17 18 19 20 21 22 23 24 25 32 33 34 35 55 56
    57 58 62 63 64 90 91
STRLIT (259) 50
REALLIT (260) 93
RESERVED (261)
INTLIT (262) 60 92
DOUBLE (263) 16
BOOL (264) 14
BOOLLIT (265) 94
VOID (266) 17 18
PARSEINT (267) 63 64
AND (268) 72
ASSIGN (269) 62
STAR (270) 69
COMMA (271) 12 13 24 25 32 33 59 61
DIV (272) 70
EQ (273) 77
GE (274) 78
GT (275) 79
LBRACE (276) 1 26 27 36 37
LE (277) 80
LPAR (278) 17 18 19 20 38 39 40 44 55 56 57 58 63 64 86 87
LSQ (279) 22 63
LT (280) 81
MINUS (281) 68 84
MOD (282) 71
NE (283) 82
NOT (284) 85
OR (285) 73
ELSE (286) 39
INT (287) 15
RPAR (288) 17 18 19 20 38 39 40 44 55 56 57 58 63 64 86 87
RSQ (289) 22 63
PLUS (290) 67 83
RBRACE (291) 1 26 27 36 37
SQ (292)
SEMICOLON (293) 4 7 9 10 11 34 35 42 43 44 47 48
ARROW (294)
LSHIFT (295) 75
RSHIFT (296) 76
XOR (297) 74
DOTLENGTH (298) 91
PRINT (299) 44
WHILE (300) 40
STRING (301) 22
STATIC (302) 8 9 10
PUBLIC (303) 8 9 10
CLASS (304) 1
IF (305) 38 39
RETURN (306) 41
END (307)
IF2 (308)
MUL (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
Program (56)
    on left: 1, on right: 0
Declaring (57)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4
MethodDecl (58)
    on left: 8, on right: 2 6
FieldDecl (59)
    on left: 9 10 11, on right: 3 5
CommaId (60)
    on left: 12 13, on right: 9 12
Type (61)
    on left: 14 15 16, on right: 9 10 19 20 21 23 24 25 34 35
MethodHeader (62)
    on left: 17 18 19 20, on right: 8
FormalParams (63)
    on left: 21 22 23, on right: 17 19
CommaTypeId (64)
    on left: 24 25, on right: 21 24
MethodBody (65)
    on left: 26 27, on right: 8
StatementVarDecl (66)
    on left: 28 29 30 31, on right: 26 28 29
CommaIdVarDecl (67)
    on left: 32 33, on right: 32 34
VarDecl (68)
    on left: 34 35, on right: 29 31
Statement (69)
    on left: 36 37 38 39 40 41 42 43 44, on right: 28 30 38 39 40 45
    46
Statement2 (70)
    on left: 45 46, on right: 36 45
ExprSemicolon (71)
    on left: 47 48, on right: 41
ExprOrStrlit (72)
    on left: 49 50, on right: 44
MethodInvAssParseArgs (73)
    on left: 51 52 53 54, on right: 42
MethodInvocation (74)
    on left: 55 56 57 58, on right: 51 88
CommaExpr (75)
    on left: 59 60 61, on right: 55 59
Assignment (76)
    on left: 62, on right: 52 65
ParseArgs (77)
    on left: 63 64, on right: 53 89
Expr (78)
    on left: 65 66, on right: 38 39 40 47 49 55 56 58 59 61 62 63 86
OtherExpr (79)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90 91 92 93 94, on right: 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83 84 85


state 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: CLASS . ID LBRACE Declaring RBRACE

    ID  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: CLASS ID . LBRACE Declaring RBRACE

    LBRACE  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: CLASS ID LBRACE . Declaring RBRACE

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    Declaring   go to state 9
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 6

   11 FieldDecl: error . SEMICOLON

    SEMICOLON  shift, and go to state 12


state 7

    4 Declaring: SEMICOLON . Declaring
    7          | SEMICOLON .

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 7 (Declaring)

    Declaring   go to state 13
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 8

    8 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody
    9 FieldDecl: PUBLIC . STATIC Type ID CommaId SEMICOLON
   10          | PUBLIC . STATIC Type ID SEMICOLON

    STATIC  shift, and go to state 14


state 9

    1 Program: CLASS ID LBRACE Declaring . RBRACE

    RBRACE  shift, and go to state 15


state 10

    2 Declaring: MethodDecl . Declaring
    6          | MethodDecl .

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 6 (Declaring)

    Declaring   go to state 16
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 11

    3 Declaring: FieldDecl . Declaring
    5          | FieldDecl .

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (Declaring)

    Declaring   go to state 17
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 12

   11 FieldDecl: error SEMICOLON .

    $default  reduce using rule 11 (FieldDecl)


state 13

    4 Declaring: SEMICOLON Declaring .

    $default  reduce using rule 4 (Declaring)


state 14

    8 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody
    9 FieldDecl: PUBLIC STATIC . Type ID CommaId SEMICOLON
   10          | PUBLIC STATIC . Type ID SEMICOLON

    DOUBLE  shift, and go to state 18
    BOOL    shift, and go to state 19
    VOID    shift, and go to state 20
    INT     shift, and go to state 21

    Type          go to state 22
    MethodHeader  go to state 23


state 15

    1 Program: CLASS ID LBRACE Declaring RBRACE .

    $default  reduce using rule 1 (Program)


state 16

    2 Declaring: MethodDecl Declaring .

    $default  reduce using rule 2 (Declaring)


state 17

    3 Declaring: FieldDecl Declaring .

    $default  reduce using rule 3 (Declaring)


state 18

   16 Type: DOUBLE .

    $default  reduce using rule 16 (Type)


state 19

   14 Type: BOOL .

    $default  reduce using rule 14 (Type)


state 20

   17 MethodHeader: VOID . ID LPAR FormalParams RPAR
   18             | VOID . ID LPAR RPAR

    ID  shift, and go to state 24


state 21

   15 Type: INT .

    $default  reduce using rule 15 (Type)


state 22

    9 FieldDecl: PUBLIC STATIC Type . ID CommaId SEMICOLON
   10          | PUBLIC STATIC Type . ID SEMICOLON
   19 MethodHeader: Type . ID LPAR FormalParams RPAR
   20             | Type . ID LPAR RPAR

    ID  shift, and go to state 25


state 23

    8 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    LBRACE  shift, and go to state 26

    MethodBody  go to state 27


state 24

   17 MethodHeader: VOID ID . LPAR FormalParams RPAR
   18             | VOID ID . LPAR RPAR

    LPAR  shift, and go to state 28


state 25

    9 FieldDecl: PUBLIC STATIC Type ID . CommaId SEMICOLON
   10          | PUBLIC STATIC Type ID . SEMICOLON
   19 MethodHeader: Type ID . LPAR FormalParams RPAR
   20             | Type ID . LPAR RPAR

    COMMA      shift, and go to state 29
    LPAR       shift, and go to state 30
    SEMICOLON  shift, and go to state 31

    CommaId  go to state 32


state 26

   26 MethodBody: LBRACE . StatementVarDecl RBRACE
   27           | LBRACE . RBRACE

    error      shift, and go to state 33
    ID         shift, and go to state 34
    DOUBLE     shift, and go to state 18
    BOOL       shift, and go to state 19
    PARSEINT   shift, and go to state 35
    LBRACE     shift, and go to state 36
    INT        shift, and go to state 21
    RBRACE     shift, and go to state 37
    SEMICOLON  shift, and go to state 38
    PRINT      shift, and go to state 39
    WHILE      shift, and go to state 40
    IF         shift, and go to state 41
    RETURN     shift, and go to state 42

    Type                   go to state 43
    StatementVarDecl       go to state 44
    VarDecl                go to state 45
    Statement              go to state 46
    MethodInvAssParseArgs  go to state 47
    MethodInvocation       go to state 48
    Assignment             go to state 49
    ParseArgs              go to state 50


state 27

    8 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 8 (MethodDecl)


state 28

   17 MethodHeader: VOID ID LPAR . FormalParams RPAR
   18             | VOID ID LPAR . RPAR

    DOUBLE  shift, and go to state 18
    BOOL    shift, and go to state 19
    INT     shift, and go to state 21
    RPAR    shift, and go to state 51
    STRING  shift, and go to state 52

    Type          go to state 53
    FormalParams  go to state 54


state 29

   12 CommaId: COMMA . ID CommaId
   13        | COMMA . ID

    ID  shift, and go to state 55


state 30

   19 MethodHeader: Type ID LPAR . FormalParams RPAR
   20             | Type ID LPAR . RPAR

    DOUBLE  shift, and go to state 18
    BOOL    shift, and go to state 19
    INT     shift, and go to state 21
    RPAR    shift, and go to state 56
    STRING  shift, and go to state 52

    Type          go to state 53
    FormalParams  go to state 57


state 31

   10 FieldDecl: PUBLIC STATIC Type ID SEMICOLON .

    $default  reduce using rule 10 (FieldDecl)


state 32

    9 FieldDecl: PUBLIC STATIC Type ID CommaId . SEMICOLON

    SEMICOLON  shift, and go to state 58


state 33

   54 MethodInvAssParseArgs: error .

    $default  reduce using rule 54 (MethodInvAssParseArgs)


state 34

   55 MethodInvocation: ID . LPAR Expr CommaExpr RPAR
   56                 | ID . LPAR Expr RPAR
   57                 | ID . LPAR RPAR
   58                 | ID . LPAR Expr error RPAR
   62 Assignment: ID . ASSIGN Expr

    ASSIGN  shift, and go to state 59
    LPAR    shift, and go to state 60


state 35

   63 ParseArgs: PARSEINT . LPAR ID LSQ Expr RSQ RPAR
   64          | PARSEINT . LPAR ID error RPAR

    LPAR  shift, and go to state 61


state 36

   36 Statement: LBRACE . Statement2 RBRACE
   37          | LBRACE . RBRACE

    error      shift, and go to state 33
    ID         shift, and go to state 34
    PARSEINT   shift, and go to state 35
    LBRACE     shift, and go to state 36
    RBRACE     shift, and go to state 62
    SEMICOLON  shift, and go to state 38
    PRINT      shift, and go to state 39
    WHILE      shift, and go to state 40
    IF         shift, and go to state 41
    RETURN     shift, and go to state 42

    Statement              go to state 63
    Statement2             go to state 64
    MethodInvAssParseArgs  go to state 47
    MethodInvocation       go to state 48
    Assignment             go to state 49
    ParseArgs              go to state 50


state 37

   27 MethodBody: LBRACE RBRACE .

    $default  reduce using rule 27 (MethodBody)


state 38

   43 Statement: SEMICOLON .

    $default  reduce using rule 43 (Statement)


state 39

   44 Statement: PRINT . LPAR ExprOrStrlit RPAR SEMICOLON

    LPAR  shift, and go to state 65


state 40

   40 Statement: WHILE . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 66


state 41

   38 Statement: IF . LPAR Expr RPAR Statement
   39          | IF . LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 67


state 42

   41 Statement: RETURN . ExprSemicolon

    ID         shift, and go to state 68
    REALLIT    shift, and go to state 69
    INTLIT     shift, and go to state 70
    BOOLLIT    shift, and go to state 71
    PARSEINT   shift, and go to state 35
    LPAR       shift, and go to state 72
    MINUS      shift, and go to state 73
    NOT        shift, and go to state 74
    PLUS       shift, and go to state 75
    SEMICOLON  shift, and go to state 76

    ExprSemicolon     go to state 77
    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 81
    OtherExpr         go to state 82


state 43

   34 VarDecl: Type . ID CommaIdVarDecl SEMICOLON
   35        | Type . ID SEMICOLON

    ID  shift, and go to state 83


state 44

   26 MethodBody: LBRACE StatementVarDecl . RBRACE

    RBRACE  shift, and go to state 84


state 45

   29 StatementVarDecl: VarDecl . StatementVarDecl
   31                 | VarDecl .

    error      shift, and go to state 33
    ID         shift, and go to state 34
    DOUBLE     shift, and go to state 18
    BOOL       shift, and go to state 19
    PARSEINT   shift, and go to state 35
    LBRACE     shift, and go to state 36
    INT        shift, and go to state 21
    SEMICOLON  shift, and go to state 38
    PRINT      shift, and go to state 39
    WHILE      shift, and go to state 40
    IF         shift, and go to state 41
    RETURN     shift, and go to state 42

    RBRACE  reduce using rule 31 (StatementVarDecl)

    Type                   go to state 43
    StatementVarDecl       go to state 85
    VarDecl                go to state 45
    Statement              go to state 46
    MethodInvAssParseArgs  go to state 47
    MethodInvocation       go to state 48
    Assignment             go to state 49
    ParseArgs              go to state 50


state 46

   28 StatementVarDecl: Statement . StatementVarDecl
   30                 | Statement .

    error      shift, and go to state 33
    ID         shift, and go to state 34
    DOUBLE     shift, and go to state 18
    BOOL       shift, and go to state 19
    PARSEINT   shift, and go to state 35
    LBRACE     shift, and go to state 36
    INT        shift, and go to state 21
    SEMICOLON  shift, and go to state 38
    PRINT      shift, and go to state 39
    WHILE      shift, and go to state 40
    IF         shift, and go to state 41
    RETURN     shift, and go to state 42

    RBRACE  reduce using rule 30 (StatementVarDecl)

    Type                   go to state 43
    StatementVarDecl       go to state 86
    VarDecl                go to state 45
    Statement              go to state 46
    MethodInvAssParseArgs  go to state 47
    MethodInvocation       go to state 48
    Assignment             go to state 49
    ParseArgs              go to state 50


state 47

   42 Statement: MethodInvAssParseArgs . SEMICOLON

    SEMICOLON  shift, and go to state 87


state 48

   51 MethodInvAssParseArgs: MethodInvocation .

    $default  reduce using rule 51 (MethodInvAssParseArgs)


state 49

   52 MethodInvAssParseArgs: Assignment .

    $default  reduce using rule 52 (MethodInvAssParseArgs)


state 50

   53 MethodInvAssParseArgs: ParseArgs .

    $default  reduce using rule 53 (MethodInvAssParseArgs)


state 51

   18 MethodHeader: VOID ID LPAR RPAR .

    $default  reduce using rule 18 (MethodHeader)


state 52

   22 FormalParams: STRING . LSQ RSQ ID

    LSQ  shift, and go to state 88


state 53

   21 FormalParams: Type . ID CommaTypeId
   23             | Type . ID

    ID  shift, and go to state 89


state 54

   17 MethodHeader: VOID ID LPAR FormalParams . RPAR

    RPAR  shift, and go to state 90


state 55

   12 CommaId: COMMA ID . CommaId
   13        | COMMA ID .

    COMMA  shift, and go to state 29

    $default  reduce using rule 13 (CommaId)

    CommaId  go to state 91


state 56

   20 MethodHeader: Type ID LPAR RPAR .

    $default  reduce using rule 20 (MethodHeader)


state 57

   19 MethodHeader: Type ID LPAR FormalParams . RPAR

    RPAR  shift, and go to state 92


state 58

    9 FieldDecl: PUBLIC STATIC Type ID CommaId SEMICOLON .

    $default  reduce using rule 9 (FieldDecl)


state 59

   62 Assignment: ID ASSIGN . Expr

    ID        shift, and go to state 68
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 93
    OtherExpr         go to state 82


state 60

   55 MethodInvocation: ID LPAR . Expr CommaExpr RPAR
   56                 | ID LPAR . Expr RPAR
   57                 | ID LPAR . RPAR
   58                 | ID LPAR . Expr error RPAR

    ID        shift, and go to state 68
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    RPAR      shift, and go to state 94
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 95
    OtherExpr         go to state 82


state 61

   63 ParseArgs: PARSEINT LPAR . ID LSQ Expr RSQ RPAR
   64          | PARSEINT LPAR . ID error RPAR

    ID  shift, and go to state 96


state 62

   37 Statement: LBRACE RBRACE .

    $default  reduce using rule 37 (Statement)


state 63

   45 Statement2: Statement . Statement2
   46           | Statement .

    error      shift, and go to state 33
    ID         shift, and go to state 34
    PARSEINT   shift, and go to state 35
    LBRACE     shift, and go to state 36
    SEMICOLON  shift, and go to state 38
    PRINT      shift, and go to state 39
    WHILE      shift, and go to state 40
    IF         shift, and go to state 41
    RETURN     shift, and go to state 42

    RBRACE  reduce using rule 46 (Statement2)

    Statement              go to state 63
    Statement2             go to state 97
    MethodInvAssParseArgs  go to state 47
    MethodInvocation       go to state 48
    Assignment             go to state 49
    ParseArgs              go to state 50


state 64

   36 Statement: LBRACE Statement2 . RBRACE

    RBRACE  shift, and go to state 98


state 65

   44 Statement: PRINT LPAR . ExprOrStrlit RPAR SEMICOLON

    ID        shift, and go to state 68
    STRLIT    shift, and go to state 99
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    ExprOrStrlit      go to state 100
    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 101
    OtherExpr         go to state 82


state 66

   40 Statement: WHILE LPAR . Expr RPAR Statement

    ID        shift, and go to state 68
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 102
    OtherExpr         go to state 82


state 67

   38 Statement: IF LPAR . Expr RPAR Statement
   39          | IF LPAR . Expr RPAR Statement ELSE Statement

    ID        shift, and go to state 68
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 103
    OtherExpr         go to state 82


state 68

   55 MethodInvocation: ID . LPAR Expr CommaExpr RPAR
   56                 | ID . LPAR Expr RPAR
   57                 | ID . LPAR RPAR
   58                 | ID . LPAR Expr error RPAR
   62 Assignment: ID . ASSIGN Expr
   90 OtherExpr: ID .
   91          | ID . DOTLENGTH

    ASSIGN     shift, and go to state 59
    LPAR       shift, and go to state 60
    DOTLENGTH  shift, and go to state 104

    $default  reduce using rule 90 (OtherExpr)


state 69

   93 OtherExpr: REALLIT .

    $default  reduce using rule 93 (OtherExpr)


state 70

   92 OtherExpr: INTLIT .

    $default  reduce using rule 92 (OtherExpr)


state 71

   94 OtherExpr: BOOLLIT .

    $default  reduce using rule 94 (OtherExpr)


state 72

   86 OtherExpr: LPAR . Expr RPAR
   87          | LPAR . error RPAR

    error     shift, and go to state 105
    ID        shift, and go to state 68
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    Assignment        go to state 79
    ParseArgs         go to state 80
    Expr              go to state 106
    OtherExpr         go to state 82


state 73

   84 OtherExpr: MINUS . OtherExpr

    ID        shift, and go to state 107
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    ParseArgs         go to state 80
    OtherExpr         go to state 108


state 74

   85 OtherExpr: NOT . OtherExpr

    ID        shift, and go to state 107
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    ParseArgs         go to state 80
    OtherExpr         go to state 109


state 75

   83 OtherExpr: PLUS . OtherExpr

    ID        shift, and go to state 107
    REALLIT   shift, and go to state 69
    INTLIT    shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 35
    LPAR      shift, and go to state 72
    MINUS     shift, and go to state 73
    NOT       shift, and go to state 74
    PLUS      shift, and go to state 75

    MethodInvocation  go to state 78
    ParseArgs         go to state 80
    OtherExpr         go to state 110


state 76

   48 ExprSemicolon: SEMICOLON .

    $default  reduce using rule 48 (ExprSemicolon)


state 77

   41 Statement: RETURN ExprSemicolon .

    $default  reduce using rule 41 (Statement)


state 78

   88 OtherExpr: MethodInvocation .

    $default  reduce using rule 88 (OtherExpr)


state 79

   65 Expr: Assignment .

    $default  reduce using rule 65 (Expr)


state 80

   89 OtherExpr: ParseArgs .

    $default  reduce using rule 89 (OtherExpr)


state 81

   47 ExprSemicolon: Expr . SEMICOLON

    SEMICOLON  shift, and go to state 111


state 82

   66 Expr: OtherExpr .
   67 OtherExpr: OtherExpr . PLUS OtherExpr
   68          | OtherExpr . MINUS OtherExpr
   69          | OtherExpr . STAR OtherExpr
   70          | OtherExpr . DIV OtherExpr
   71          | OtherExpr . MOD OtherExpr
   72          | OtherExpr . AND OtherExpr
   73          | OtherExpr . OR OtherExpr
   74          | OtherExpr . XOR OtherExpr
   75          | OtherExpr . LSHIFT OtherExpr
   76          | OtherExpr . RSHIFT OtherExpr
   77          | OtherExpr . EQ OtherExpr
   78          | OtherExpr . GE OtherExpr
   79          | OtherExpr . GT OtherExpr
   80          | OtherExpr . LE OtherExpr
   81          | OtherExpr . LT OtherExpr
   82          | OtherExpr . NE OtherExpr

    AND     shift, and go to state 112
    STAR    shift, and go to state 113
    DIV     shift, and go to state 114
    EQ      shift, and go to state 115
    GE      shift, and go to state 116
    GT      shift, and go to state 117
    LE      shift, and go to state 118
    LT      shift, and go to state 119
    MINUS   shift, and go to state 120
    MOD     shift, and go to state 121
    NE      shift, and go to state 122
    OR      shift, and go to state 123
    PLUS    shift, and go to state 124
    LSHIFT  shift, and go to state 125
    RSHIFT  shift, and go to state 126
    XOR     shift, and go to state 127

    $default  reduce using rule 66 (Expr)


state 83

   34 VarDecl: Type ID . CommaIdVarDecl SEMICOLON
   35        | Type ID . SEMICOLON

    COMMA      shift, and go to state 128
    SEMICOLON  shift, and go to state 129

    CommaIdVarDecl  go to state 130


state 84

   26 MethodBody: LBRACE StatementVarDecl RBRACE .

    $default  reduce using rule 26 (MethodBody)


state 85

   29 StatementVarDecl: VarDecl StatementVarDecl .

    $default  reduce using rule 29 (StatementVarDecl)


state 86

   28 StatementVarDecl: Statement StatementVarDecl .

    $default  reduce using rule 28 (StatementVarDecl)


state 87

   42 Statement: MethodInvAssParseArgs SEMICOLON .

    $default  reduce using rule 42 (Statement)


state 88

   22 FormalParams: STRING LSQ . RSQ ID

    RSQ  shift, and go to state 131


state 89

   21 FormalParams: Type ID . CommaTypeId
   23             | Type ID .

    COMMA  shift, and go to state 132

    $default  reduce using rule 23 (FormalParams)

    CommaTypeId  go to state 133


state 90

   17 MethodHeader: VOID ID LPAR FormalParams RPAR .

    $default  reduce using rule 17 (MethodHeader)


state 91

   12 CommaId: COMMA ID CommaId .

    $default  reduce using rule 12 (CommaId)


state 92

   19 MethodHeader: Type ID LPAR FormalParams RPAR .

    $default  reduce using rule 19 (MethodHeader)


state 93

   62 Assignment: ID ASSIGN Expr .

    $default  reduce using rule 62 (Assignment)


state 94

   57 MethodInvocation: ID LPAR RPAR .

    $default  reduce using rule 57 (MethodInvocation)


state 95

   55 MethodInvocation: ID LPAR Expr . CommaExpr RPAR
   56                 | ID LPAR Expr . RPAR
   58                 | ID LPAR Expr . error RPAR

    error   shift, and go to state 134
    INTLIT  shift, and go to state 135
    COMMA   shift, and go to state 136
    RPAR    shift, and go to state 137

    CommaExpr  go to state 138


state 96

   63 ParseArgs: PARSEINT LPAR ID . LSQ Expr RSQ RPAR
   64          | PARSEINT LPAR ID . error RPAR

    error  shift, and go to state 139
    LSQ    shift, and go to state 140


state 97

   45 Statement2: Statement Statement2 .

    $default  reduce using rule 45 (Statement2)


state 98

   36 Statement: LBRACE Statement2 RBRACE .

    $default  reduce using rule 36 (Statement)


state 99

   50 ExprOrStrlit: STRLIT .

    $default  reduce using rule 50 (ExprOrStrlit)


state 100

   44 Statement: PRINT LPAR ExprOrStrlit . RPAR SEMICOLON

    RPAR  shift, and go to state 141


state 101

   49 ExprOrStrlit: Expr .

    $default  reduce using rule 49 (ExprOrStrlit)


state 102

   40 Statement: WHILE LPAR Expr . RPAR Statement

    RPAR  shift, and go to state 142


state 103

   38 Statement: IF LPAR Expr . RPAR Statement
   39          | IF LPAR Expr . RPAR Statement ELSE Statement

    RPAR  shift, and go to state 143


state 104

   91 OtherExpr: ID DOTLENGTH .

    $default  reduce using rule 91 (OtherExpr)


state 105

   87 OtherExpr: LPAR error . RPAR

    RPAR  shift, and go to state 144


state 106

   86 OtherExpr: LPAR Expr . RPAR

    RPAR  shift, and go to state 145


state 107

   55 MethodInvocation: ID . LPAR Expr CommaExpr RPAR
   56                 | ID . LPAR Expr RPAR
   57                 | ID . LPAR RPAR
   58                 | ID . LPAR Expr error RPAR
   90 OtherExpr: ID .
   91          | ID . DOTLENGTH

    LPAR       shift, and go to state 60
    DOTLENGTH  shift, and go to state 104

    $default  reduce using rule 90 (OtherExpr)


state 108

   67 OtherExpr: OtherExpr . PLUS OtherExpr
   68          | OtherExpr . MINUS OtherExpr
   69          | OtherExpr . STAR OtherExpr
   70          | OtherExpr . DIV OtherExpr
   71          | OtherExpr . MOD OtherExpr
   72          | OtherExpr . AND OtherExpr
   73          | OtherExpr . OR OtherExpr
   74          | OtherExpr . XOR OtherExpr
   75          | OtherExpr . LSHIFT OtherExpr
   76          | OtherExpr . RSHIFT OtherExpr
   77          | OtherExpr . EQ OtherExpr
   78          | OtherExpr . GE OtherExpr
   79          | OtherExpr . GT OtherExpr
   80          | OtherExpr . LE OtherExpr
   81          | OtherExpr . LT OtherExpr
   82          | OtherExpr . NE OtherExpr
   84          | MINUS OtherExpr .

    DIV  shift, and go to state 114
    MOD  shift, and go to state 121

    $default  reduce using rule 84 (OtherExpr)


state 109
